--- a/Presentacion/AsistenteInstalacion/InstalacionBd.resx
+++ b/Presentacion/AsistenteInstalacion/InstalacionBd.resx
@@ -280,8 +280,6 @@ BROWSERSVCSTARTUPTYPE="Disabled"</value>
   <data name="txtCrear_procedimientos.Text" xml:space="preserve">
     <value>USE [master]
 GO
-/****** Object:  Database [ORUS369]    Script Date: 1/6/2023 16:44:49 ******/
-
 IF (1 = FULLTEXTSERVICEPROPERTY('IsFullTextInstalled'))
 begin
 EXEC [ORUS369].[dbo].[sp_fulltext_database] @action = 'enable'
@@ -345,14 +343,16 @@ ALTER DATABASE [ORUS369] SET TARGET_RECOVERY_TIME = 60 SECONDS
 GO
 ALTER DATABASE [ORUS369] SET DELAYED_DURABILITY = DISABLED 
 GO
+ALTER DATABASE [ORUS369] SET QUERY_STORE = OFF
+GO
 USE [ORUS369]
 GO
-/****** Object:  User [orus]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  User [orus]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 CREATE USER [orus] FOR LOGIN [orus] WITH DEFAULT_SCHEMA=[dbo]
 GO
 ALTER ROLE [db_owner] ADD MEMBER [orus]
 GO
-/****** Object:  Table [dbo].[ASISTENCIAS]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[ASISTENCIAS]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -371,7 +371,7 @@ CREATE TABLE [dbo].[ASISTENCIAS](
 )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
 ) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
 GO
-/****** Object:  Table [dbo].[Cargo]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[Cargo]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -386,7 +386,21 @@ CREATE TABLE [dbo].[Cargo](
 )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
 ) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
 GO
-/****** Object:  Table [dbo].[Modulos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[CopiasBd]    Script Date: 08/11/2020 01:25:06 a.m. ******/
+SET ANSI_NULLS ON
+GO
+SET QUOTED_IDENTIFIER ON
+GO
+CREATE TABLE [dbo].[CopiasBd](
+	[IdCopias] [int] IDENTITY(1,1) NOT NULL,
+	[Ruta] [varchar](max) NULL,
+ CONSTRAINT [PK_CopiasBd] PRIMARY KEY CLUSTERED 
+(
+	[IdCopias] ASC
+)WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
+) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
+GO
+/****** Object:  Table [dbo].[Modulos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -400,7 +414,7 @@ CREATE TABLE [dbo].[Modulos](
 )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
 ) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
 GO
-/****** Object:  Table [dbo].[Permisos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[Permisos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -415,7 +429,7 @@ CREATE TABLE [dbo].[Permisos](
 )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
 ) ON [PRIMARY]
 GO
-/****** Object:  Table [dbo].[Personal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[Personal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -435,7 +449,7 @@ CREATE TABLE [dbo].[Personal](
 )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
 ) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
 GO
-/****** Object:  Table [dbo].[Usuarios]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  Table [dbo].[Usuarios]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -473,7 +487,7 @@ REFERENCES [dbo].[Cargo] ([Id_cargo])
 GO
 ALTER TABLE [dbo].[Personal] CHECK CONSTRAINT [FK_Personal_Cargo]
 GO
-/****** Object:  StoredProcedure [dbo].[buscar_usuarios]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[buscar_usuarios]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -484,9 +498,8 @@ as
 select * from Usuarios 
 where Login+NombresApellidos Like '%' + @buscador +'%'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[buscarAsistenciasId]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[buscarAsistenciasId]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -497,9 +510,8 @@ as
 select * from ASISTENCIAS
 where Id_personal=@Idpersonal and ASISTENCIAS.Estado='ENTRADA'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[buscarCargos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[buscarCargos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -510,9 +522,8 @@ as
 select Id_cargo,Cargo,SueldoPorHora as Sueldo  from Cargo
 where Cargo lIKE '%' + @buscador +'%'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[BuscarPersonal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[BuscarPersonal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -533,9 +544,8 @@ inner join Cargo on Cargo.Id_cargo=Personal.Id_cargo ) as Paginado
 Where (Paginado.Numero_de_fila &gt;=@Desde) and (Paginado.Numero_de_fila&lt;=@Hasta)
 and (Nombres + Identificacion Like '%' + @Buscador + '%')
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[BuscarPersonalIdentidad]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[BuscarPersonalIdentidad]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -546,9 +556,8 @@ as
 select * from Personal 
 where Identificacion=@Buscador
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[ConfirmarSalida]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[ConfirmarSalida]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -564,9 +573,8 @@ Horas =@Horas ,
 Estado='SALIDA'
 where Id_personal   =@Id_personal and Estado='ENTRADA'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[editar_Cargo]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[editar_Cargo]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -582,9 +590,8 @@ else
 update  Cargo set Cargo=@Cargo, SueldoPorHora=@Sueldo
 where Id_cargo=@id
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[editar_usuarios]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[editar_usuarios]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -604,9 +611,18 @@ update Usuarios set NombresApellidos= @nombres,Password =@Password , Icono=@Icon
  ,Login =@Login 
  where idUsuario = @idusuario 
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[editarPersonal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[EditarCopiasBd]    Script Date: 08/11/2020 01:25:06 a.m. ******/
+SET ANSI_NULLS ON
+GO
+SET QUOTED_IDENTIFIER ON
+GO
+create proc [dbo].[EditarCopiasBd]
+@Ruta varchar(max)
+as
+update CopiasBd set Ruta=@Ruta 
+GO
+/****** Object:  StoredProcedure [dbo].[editarPersonal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -626,9 +642,8 @@ Update Personal set
 Nombres=@Nombres ,Identificacion=@Identificacion,Pais=@Pais,Id_cargo =@Id_cargo ,SueldoPorHora =@Sueldo_por_hora 
 where Id_personal=@Id_personal
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[eliminar_Permisos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[eliminar_Permisos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -640,9 +655,8 @@ As
 DELETE FROM Permisos
 WHERE IdUsuario=@IdUsuario
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[eliminar_usuarios]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[eliminar_usuarios]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -657,9 +671,8 @@ else
 update Usuarios set Estado ='ELIMINADO'
 where idUsuario=@idusuario and Login &lt;&gt; 'admin'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[eliminarPersonal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[eliminarPersonal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -670,9 +683,8 @@ as
 Update Personal set Estado ='ELIMINADO'
 where Id_personal = @Idpersonal 
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[Insertar_ASISTENCIAS]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[Insertar_ASISTENCIAS]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -693,9 +705,8 @@ create proc [dbo].[Insertar_ASISTENCIAS]
 	@Horas,
 	@Observacion)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[insertar_Cargo]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[insertar_Cargo]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -709,9 +720,8 @@ RAISERROR ('YA EXISTE UN CARGO CON ESTE NOMBRE, Ingrese de nuevo', 16,1)
 else
 insert into Cargo  values (@Cargo, @SueldoPorHora)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[insertar_Modulos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[insertar_Modulos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -723,9 +733,8 @@ INSERT INTO Modulos
 Values (
 @Modulo)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[insertar_Permisos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[insertar_Permisos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -739,9 +748,8 @@ Values (
 @IdModulo,
 @IdUsuario)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[insertar_usuario]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[insertar_usuario]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -759,9 +767,20 @@ else
 insert into Usuarios 
 values (@nombres, @Login, @Password ,@Icono ,@Estado)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[InsertarPersonal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[InsertarCopiasBd]    Script Date: 08/11/2020 01:25:06 a.m. ******/
+SET ANSI_NULLS ON
+GO
+SET QUOTED_IDENTIFIER ON
+GO
+create proc [dbo].[InsertarCopiasBd]
+as
+declare @Ruta varchar(max)
+set @Ruta='-'
+insert into CopiasBd
+values(@Ruta)
+GO
+/****** Object:  StoredProcedure [dbo].[InsertarPersonal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -792,9 +811,8 @@ values(@Nombres ,
 Select @Id_personal=scope_identity()
 Update Personal set codigo = @Id_personal where Id_personal=@Id_personal
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[mostrar_asistencias_diarias]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[mostrar_asistencias_diarias]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -804,14 +822,14 @@ CREATE proc [dbo].[mostrar_asistencias_diarias]
 @hasta as date,
 @semana as int
 as
-select Personal.Nombres, Personal.Identificacion, CONVERT(date, Fecha_salida) as Fecha, sum(Horas) as Horas,
-@desde as desde, @hasta as hasta, DATENAME(WEEKDAY, Fecha_salida) as dia, @semana as semana, Personal.SueldoPorHora
-from ASISTENCIAS inner join Personal on personal.Id_personal = ASISTENCIAS.Id_personal
-where Fecha_salida &gt;= @desde and Fecha_salida &lt;= @hasta
-group by personal.Nombres, Personal.Identificacion,Fecha_salida, Personal.SueldoPorHora
-order by CONVERT(date, Fecha_salida) asc
+select Personal.Nombres ,Personal.Identificacion ,convert(date, Fecha_salida) as fecha,sum(Horas) as Horas,
+@desde as desde , @hasta as hasta, Datename(WEEKDAY,Fecha_salida) as dia,@semana as Semana,Personal.SueldoPorHora ,DATENAME ( DAY , Fecha_salida ) 
+from ASISTENCIAS inner join Personal on Personal.Id_personal =ASISTENCIAS.Id_personal 
+where Fecha_salida &gt;=@desde and Fecha_salida &lt;=@hasta 
+group by Personal.Nombres,Personal.Identificacion, Fecha_salida,Personal.SueldoPorHora ,convert(date, Fecha_salida)
+order by convert(date, Fecha_salida) asc
 GO
-/****** Object:  StoredProcedure [dbo].[mostrar_Permisos]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[mostrar_Permisos]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -819,10 +837,10 @@ GO
 CREATE proc [dbo].[mostrar_Permisos]
 @idusuario int
 as
-select Permisos.IdModulo, Modulos.Modulo from Permisos inner join Modulos on Modulos.IdModulo = permisos.IdModulo
+select Permisos.IdModulo , Modulos.Modulo  from Permisos inner join Modulos on Modulos.IdModulo=Permisos.IdModulo 
 where IdUsuario=@idusuario
 GO
-/****** Object:  StoredProcedure [dbo].[mostrarPersonal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[mostrarPersonal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -841,9 +859,8 @@ from Personal
 inner join Cargo on Cargo.Id_cargo=Personal.Id_cargo ) as Paginado
 Where (Paginado.Numero_de_fila &gt;=@Desde) and (Paginado.Numero_de_fila&lt;=@Hasta)
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[ObtenerIdUsuario]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[ObtenerIdUsuario]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -854,9 +871,8 @@ as
 select idUsuario from Usuarios 
 where Login=@Login 
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[restaurar_personal]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[restaurar_personal]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -867,9 +883,8 @@ as
 update Personal set Estado = 'ACTIVO'
 where Id_personal=@Idpersonal
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[restaurar_usuario]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[restaurar_usuario]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -880,9 +895,8 @@ as
 Update Usuarios set Estado ='ACTIVO'
 where idUsuario =@idusuario and Login&lt;&gt;'admin'
 
-
 GO
-/****** Object:  StoredProcedure [dbo].[validar_usuario]    Script Date: 1/6/2023 16:44:49 ******/
+/****** Object:  StoredProcedure [dbo].[validar_usuario]    Script Date: 08/11/2020 01:25:06 a.m. ******/
 SET ANSI_NULLS ON
 GO
 SET QUOTED_IDENTIFIER ON
@@ -894,12 +908,12 @@ as
 select * from Usuarios 
 where Password = @password and Login =@login and Estado ='ACTIVO'
 
-
 GO
 USE [master]
 GO
 ALTER DATABASE [ORUS369] SET  READ_WRITE 
-GO</value>
+GO
+</value>
   </data>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
